--- a/components/ContactUs/User/FeaturesPage/VoicemailFeaturesPage/VoiceKeyFeatures.css
+++ b/components/ContactUs/User/FeaturesPage/VoicemailFeaturesPage/VoiceKeyFeatures.css
@@ -34,7 +34,7 @@
   
   .card-content {
     padding: 20px;
-    text-align: center;
+    text-align: left;
   }
   
   .card-icon {
